2009-07-16  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/cms/cms.py:
	Pytis CMS: Fixed check for duplicit order at the same level..

2009-07-15  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/_test.py:
	* lib/pytis/data/postgresql.py:
	Escape backslashes in PostgreSQL backend.

2009-07-03  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/screen.py:
	Print debug information about enabled menu items.

2009-04-30  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/application.py:
	Fixes of typos in has_access docstring.

2009-04-30  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/dbapi.py:
	Raise DBSystemException instead of DBException on database connection failure.

2009-07-14  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/web/form.py:
	Automatically assign unique classes to web form layout groups to allow their CSS styling..

2009-07-14  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/cms/web.py:
	Pytis CMS: Respect changes in Wiking 'module_uri()' API..

2009-07-13  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/web/form.py:
	Add comment for the previous change..

2009-07-13  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/web/form.py:
	Add empty cells to ListView grid to prevent spanning of unfinished rows..

2009-07-13  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/web/form.py:
	Disable calendar widget invocation for disabled fields in HTML forms..

2009-07-13  Tomas Cerha  <cerha@brailcom.org>

	* translations/pytis.cs.po:
	* translations/pytis.de.po:
	* translations/pytis.es.po:
	* translations/pytis.fr.po:
	* translations/pytis.hu.po:
	* translations/pytis.pl.po:
	* translations/pytis.sk.po:
	Translations updated..

2009-07-13  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/web/form.py:
	Use dynamic calendar widget for date entry in HTML forms..

2009-07-02  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/web/form.py:
	Documentation extended..

2009-07-02  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/cms/web.py: