@@ -1,3 +1,8 @@
+2009-07-16  Pavel Hanak  <hanak@wpb.cz>
+
+	* lib/pytis/cms/web.py:
+	PYTIS CMS: Added possibility to authenticate against LDAP style passwords..
+
 2009-07-16  Tomas Cerha  <cerha@brailcom.org>
 
 	* lib/pytis/cms/cms.py:
